<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResults"
        android:layout_width="209dp"
        android:layout_height="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <EditText
        android:id="@+id/edtNum"
        android:layout_width="257dp"
        android:layout_height="61dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sum"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtResults"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnPopulate"
        android:layout_width="170dp"
        android:layout_height="53dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="10dp"
        android:text="@string/populate"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSumEven"
        app:layout_constraintEnd_toStartOf="@+id/btnDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtSum" />

    <Button
        android:id="@+id/btnSumEven"
        android:layout_width="172dp"
        android:layout_height="70dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/compute_sum_even"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMult5"
        app:layout_constraintEnd_toStartOf="@+id/btnAvg"
        app:layout_constraintTop_toBottomOf="@+id/btnPopulate"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnMult5"
        android:layout_width="172dp"
        android:layout_height="54dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="42dp"
        android:text="@string/sum_of_multiple"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnOdd"
        app:layout_constraintTop_toBottomOf="@+id/btnSumEven" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="146dp"
        android:layout_height="53dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="10dp"
        android:text="@string/display"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAvg"
        app:layout_constraintStart_toEndOf="@+id/btnPopulate"
        app:layout_constraintTop_toBottomOf="@+id/txtSum" />

    <Button
        android:id="@+id/btnAvg"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="13dp"
        android:text="@string/compute_avg"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOdd"
        app:layout_constraintStart_toEndOf="@+id/btnSumEven"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplay"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnOdd"
        android:layout_width="151dp"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="13dp"
        android:text="@string/avg_odd"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnMult5"
        app:layout_constraintTop_toBottomOf="@+id/btnAvg" />

    <TextView
        android:id="@+id/txtSum"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="111dp"
        android:text="@string/sum"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResults" />

</androidx.constraintlayout.widget.ConstraintLayout>